[package]
name = "motif_finder"
version = "0.1.4"
edition = "2021"
authors = ["Nithish Narasimman <me@nithishbn.com>"]
description = "Find motifs using Gibbs Sampler, Median String, and Randomized Motif Search algorithms in a fasta formatted file of reads\nRefer to the README to understand the input data"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wapm]
namespace = "nithishbn"
abi = "wasi"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "motif_finder"

[dependencies]
chrono = {version="0.4.24",default-features = false, features = ["clock"]}
clap = { version = "4.1.8", default-features = false,features = ["derive", "std", "help", "usage", "error-context", "suggestions"]}
rand = "0.8.5"
bio = "*"

