[package]
name = "motif_finder"
version = "0.6.1"
edition = "2021"
authors = ["Nithish Narasimman <me@nithishbn.com>"]
license = "GPL-3.0-only"
description = "Find motifs using Gibbs Sampler, Median String, and Randomized Motif Search algorithms in a fasta formatted file of reads\nRefer to the README to understand the input data"
repository = "https://github.com/nithishbn/MotifFinder"
homepage = "https://github.com/nithishbn/MotifFinder"

[package.metadata.wapm]
namespace = "nithishbn"
abi = "wasi"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/bin/motif_finder.rs"
name = "motif_finder"

[dependencies]
bio = "1.1.0"
chrono = {version="0.4.24",default-features = false, features = ["clock"]}
clap = { version = "4.1.8", default-features = false,features = ["derive", "std", "help", "usage", "error-context", "suggestions","color"]}
clap-verbosity-flag = "2.0.1"
indicatif = { version = "0.17.3", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
clap_mangen = "0.2.10"
clap = { version = "4.1.8", default-features = false,features = ["derive", "std", "help", "usage", "error-context", "suggestions","color"]}
chrono = {version="0.4.24",default-features = false, features = ["clock"]}

rayon = "1.7.0"
